appId: ${MAESTRO_APP_ID}
---
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: '^Tab Bar$'
          point: '29%,38%'
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          text: '^Home$'
          leftOf: '^Activity.*$'
      - assertVisible:
          id: ScreenHeaderTitle
          text: '^Home$'
- assertVisible: '^Home$'
